--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,7 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
 
 body{
-    background-color: #ffffff;
+    background-color: #F6F8FA;
     font-family: 'Inter', sans-serif; /* Use 'Inter' as the preferred font family */
 color: #1C4980;
 }
