--- a/src/app/components/side-menu/side-menu.component.html
+++ b/src/app/components/side-menu/side-menu.component.html
@@ -1,121 +1,66 @@
-    <!-- partial:index.partial.html -->
-    <div class="wrapper">
-        <!-- Sidebar  -->
-        <nav id="sidebar">
-         
-  
-          <ul class="list-unstyled components mt-4">
-            <p class="p-0 m-0">
-                <img src="assets/images/Vector.svg" alt="">
-            </p>
-            <p class="m-0 p-0">Dashboard</p>
-            <br>
-         <div class="set-as-active">
-            <span>
-                <p class="p-0 m-0">
-                    <img src="assets/images/note_alt.svg" alt="">
-                </p>
-                <p class="m-0 p-0">Assessment</p>
-              </span>
-         </div>
-            <br>
-            <p class="p-0 m-0">
-                <img src="assets/images/quiz.svg" alt="">
-            </p>
-            <p class="m-0 p-0">My Library</p>
-            <br>
-          </ul>
-          <ul class="list-unstyled components border-0">
-<span class="crete-red">
-Admin
-</span>
-<br>
-<p class="p-0 m-0">
-    <img src="assets/images/admin_meds.svg" alt="">
-</p>
-<p class="m-0 p-0">Round <br>
-Status
-</p>
-          </ul>
-        </nav>
-  
-        <!-- Page Content  -->
-        <div id="content">
-          <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <div class="container-fluid-one">
-              <button type="button" id="sidebarCollapse" class="btn btn-info">
-                <i class="fas fa-align-left"></i>
-              </button>
-       <div class="ml-3">
-        <span class="head-heading">
-            Assessment
+<!-- partial:index.partial.html -->
+<div class="wrapper">
+  <!-- Sidebar  -->
+  <nav id="sidebar">
+    <ul class="list-unstyled components mt-4">
+      <p class="p-0 m-0">
+        <img src="assets/images/Vector.svg" alt="" />
+      </p>
+      <p class="m-0 p-0">Dashboard</p>
+      <br />
+      <div class="set-as-active">
+        <span  >
+          <p class="p-0 m-0">
+            <img src="assets/images/note_alt.svg" alt="" />
+          </p>
+          <p class="m-0 p-0">Assessment</p>
         </span>
-       </div>
-       <div class="ml-3">
-        <span class="head-heading-sec">
-           My Assessment
-        </span>
-       </div>
-            </div>
-          </nav>
-  
-          <h2>Collapsible Sidebar Using Bootstrap 4</h2>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-            minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-            aliquip ex ea commodo consequat. Duis aute irure dolor in
-            reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-            pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-            culpa qui officia deserunt mollit anim id est laborum.
-          </p>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-            minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-            aliquip ex ea commodo consequat. Duis aute irure dolor in
-            reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-            pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-            culpa qui officia deserunt mollit anim id est laborum.
-          </p>
-  
-          <div class="line"></div>
-  
-          <h2>Lorem Ipsum Dolor</h2>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-            minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-            aliquip ex ea commodo consequat. Duis aute irure dolor in
-            reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-            pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-            culpa qui officia deserunt mollit anim id est laborum.
-          </p>
-  
-          <div class="line"></div>
-  
-          <h2>Lorem Ipsum Dolor</h2>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-            minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-            aliquip ex ea commodo consequat. Duis aute irure dolor in
-            reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-            pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-            culpa qui officia deserunt mollit anim id est laborum.
-          </p>
-  
-          <div class="line"></div>
-  
-          <h3>Lorem Ipsum Dolor</h3>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-            minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-            aliquip ex ea commodo consequat. Duis aute irure dolor in
-            reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-            pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-            culpa qui officia deserunt mollit anim id est laborum.
-          </p>
+      </div>
+      <br />
+      <p class="p-0 m-0">
+        <img src="assets/images/quiz.svg" alt="" />
+      </p>
+      <p class="m-0 p-0">My Library</p>
+      <br />
+    </ul>
+    <ul class="list-unstyled components border-0">
+      <span class="crete-red"> Admin </span>
+      <br />
+      <p class="p-0 m-0">
+        <img src="assets/images/admin_meds.svg" alt="" />
+      </p>
+      <p class="m-0 p-0">
+        Round <br />
+        Status
+      </p>
+    </ul>
+  </nav>
+
+  <!-- Page Content  -->
+  <div id="content">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <div class="container-fluid-one">
+        <button type="button" id="sidebarCollapse" class="btn btn-info">
+          <i class="fas fa-align-left"></i>
+        </button>
+        <div class="ml-3 cursor" >
+          <span class="head-heading"> Assessment </span>
+        </div>
+        <div class="ml-3">
+          <span class="head-heading-sec"> My Assessment </span>
+        </div>
+        <div class="border-active">
+
+        </div>
+        <div class="end-type">
+          <img src="assets/images/mobile_screen_share.svg" alt="">
         </div>
       </div>
+    </nav>
+
+    <h4>Assessments Overview</h4>
+    <app-dashboard></app-dashboard>
+  </div>
+</div>
+
+
