--- a/src/app/components/side-menu/side-menu.component.scss
+++ b/src/app/components/side-menu/side-menu.component.scss
@@ -43,20 +43,7 @@
     .sidebarMenuBox::-webkit-scrollbar {
         display: none;
     }
-    
-    label {
-        display: inline-block;
-        margin-bottom: 0.5rem;
-        cursor: pointer;
-        background: linear-gradient(48.78deg, #FFB000 -3.61%, #FF564D 20.77%, #FF0098 52.14%, #5D00C1 88.94%);
-        background-clip: text;
-        border-image-slice: 1;
-        border-image-source: linear-gradient(48.78deg, #FFB000 -3.61%, #FF564D 20.77%, #FF0098 52.14%, #5D00C1 88.94%);
-        -webkit-background-clip: text;
-        -webkit-text-fill-color: transparent;
-        font-size: 18px;
-        margin-bottom: 0px;
-    }
+
     .set-as-active{
         background: #E5F1FC;
         width: 58%;
@@ -89,3 +76,18 @@
     line-height: 28px;
     letter-spacing: 0px;
     }
+    .cursor{
+        cursor: pointer;
+    }
+    .border-active{
+        position: absolute;
+        background: #0073E6;
+        width: 139px;
+        height: 4px;
+        bottom: 0;
+        left: 11.6em;
+    }
+    .end-type{
+        position: absolute;
+        right: 15px;
+      }
