update latest code

--- a/src/app/components/side-menu/side-menu.component.html
+++ b/src/app/components/side-menu/side-menu.component.html
@@ -59,6 +59,8 @@
     </nav>
 
     <h4>Assessments Overview</h4>
+    <card-layout></card-layout>
+    <h4 class="mt-4">My Assessment</h4>
     <app-dashboard></app-dashboard>
   </div>
 </div>
