--- a/src/app/components/side-menu/side-menu.component.scss
+++ b/src/app/components/side-menu/side-menu.component.scss
@@ -91,3 +91,9 @@
         position: absolute;
         right: 15px;
       }
+
+      @media(max-width:425px){
+        .end-type{
+            display: none;
+        }
+      }
