--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -6,6 +6,7 @@
           <img src="assets/images/add-assignment.svg" alt="Add Assignment" />
         </div>
         <h5>New Assessment</h5>
+     
         <p>
           From here you can add questions of multiple types like MCQs,
           subjective (text or paragraph)!
@@ -24,7 +25,7 @@
             </div>
           </div>
           <div class="row pt-2">
-            <div class="col-4">
+            <div class="col-md-4 col-sm-12">
               <h5 class="text">Math Assessment</h5>
             </div>
           </div>
@@ -86,7 +87,7 @@
             </div>
           </div>
           <div class="row pt-2">
-            <div class="col-4">
+            <div class="col-md-4 col-sm-12">
               <h5 class="text">Math Assessment</h5>
             </div>
           </div>
